[metadata]
name = psphere
version = 0.6.1.dev0
description = vSphere SDK for Python
long_description = file: README.rst, CHANGES.rst
author = Jonathan Kinred
author_email = jonathan.kinred@gmail.com
maintainer = Thomas Grainger
maintainer_email = psphere@graingert.co.uk
url = https://github.com/psphere-project/psphere
keywords =
    vsphere
    vmware
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License

[options]
packages = psphere
install_requires =
    six
    suds-community
    PyYAML

[options.package_data]
psphere =
    wsdl/*

[upload_sphinx]
upload-dir = build/sphinx/html

[bdist_wheel]
universal = 1

[tool:multilint]
paths = psphere
    setup.py
    tests
    examples

[isort]
line_length = 79
multi_line_output = 5
balanced_wrapping = True
include_trailing_comma = True
known_first_party = psphere
not_skip = __init__.py
add_imports = from __future__ import print_function, from __future__ import division, from __future__ import absolute_import

[flake8]
max-line-length = 258
ignore = E101,E111,E117,E121,E124,E127,E128,E129,E203,E225,E226,E231,E265,E301,E302,E305,E711,E999,F821,W191,W291,W292,W293,W391,W504,W605
